  * Add support for writing terse output with minimal newlines
  * Add support for xsd:float and xsd:double literals
  * Make nodes opaque
  * Remove SERD_DISABLE_DEPRECATED and SERD_DEPRECATED_BY
  * Remove serd_uri_to_path()
  * Remove support for reading Turtle named inline nodes extension
  * Remove useless character counting from API
  * Replace SerdChunk with ZixStringView
  * Simplify statement flags
  * Simplify writer style options and write UTF-8 by default
  * Strengthen handling of corrupt UTF-8 input
  * Strictly parse percent-encoding in file URIs
  * Support writing all escapes in Turtle and TriG prefixed names
  * Use a fixed-size reader stack
  * Use char* for strings in public API

 -- David Robillard <d@drobilla.net>  Tue, 30 Jan 2024 14:42:20 +0000

serd (0.32.3) unstable; urgency=medium

  * Clean up enum declarations
  * Fix library current_version on MacOS
  * Fix overly permissive parsing of syntax names on the command line
  * Fix parsing NQuads lines with no space before the final dot
  * Fix rewriting special literals when datatype URIs are prefixed names
  * Gracefully handle errors while writing the end of anonymous nodes
  * Improve test suite coverage
  * Simplify some character classification and comparison code
  * Support reading lone lists in lax mode
  * Treat out of range unicode characters as errors
  * Write blank lines between graphs and statements in TriG

 -- David Robillard <d@drobilla.net>  Tue, 25 Jun 2024 22:38:16 +0000

serd (0.32.2) stable; urgency=medium

  * Enable clang nullability checks
  * Fix writing empty list objects within blank nodes

 -- David Robillard <d@drobilla.net>  Tue, 23 Jan 2024 19:32:21 +0000

serd (0.32.0) stable; urgency=medium

  * Add Windows path separator support to serd_node_new_file_uri()
  * Add long "help" and "version" options to serdi
  * Add options to disable html or singlehtml documentation
  * Add serd_reader_skip_until_byte() to public API