@@ -8,8 +8,8 @@ Serd is a lightweight C library for working with RDF data.
 
 Serd can be used by high-performance or resource-limited applications to read
 or write [Turtle][], [TriG][], [NTriples][], and [NQuads][].  The included
-`serdi` tool can be used to efficiently process RDF documents in scripts or on
-the command-line.
+command line tools can be used to efficiently process RDF documents in scripts
+or on the command-line.
 
 Features
 --------
@@ -42,14 +42,14 @@ Features
 Performance
 -----------
 
-The benchmarks below compare `serdi`, [rapper][], and [riot][] re-serialising
-Turtle data generated by [sp2b][] on an AMD 1950x.  Of the three, `serdi` is
-the fastest by a wide margin, and the only one that uses a constant amount of
-memory for all input sizes.
+The benchmarks below compare `serd-pipe`, [rapper][], and [riot][]
+re-serialising Turtle data generated by [sp2b][] on an AMD 1950x.  Of the
+three, `serd-pipe` is the fastest by a wide margin, and the only one that uses
+a constant amount of memory for all input sizes.
 
-![Throughput](doc/serdi-throughput.svg)
-![Time](doc/serdi-time.svg)
-![Memory](doc/serdi-memory.svg)
+![Throughput](doc/serd-throughput.svg)
+![Time](doc/serd-time.svg)
+![Memory](doc/serd-memory.svg)
 
 Documentation
 -------------
@@ -57,7 +57,7 @@ Documentation
  * [Installation instructions](INSTALL.md)
  * [Single-page API reference](https://drobilla.gitlab.io/serd/doc/singlehtml/)
  * [Paginated API reference](https://drobilla.gitlab.io/serd/doc/html/)
- * [`serdi` man page](https://drobilla.gitlab.io/serd/man/serdi.html)
+ * [`serd-pipe` man page](https://drobilla.gitlab.io/serd/man/serd-pipe.html)
 
 Versioning
 ----------
