@@ -1,13 +1,13 @@
 .\" Copyright 2011-2024 David Robillard <d@drobilla.net>
 .\" SPDX-License-Identifier: ISC
-.Dd April 30, 2023
-.Dt SERDI 1
+.Dd May 04, 2023
+.Dt SERD-PIPE 1
 .Os Serd 1.1.1
 .Sh NAME
-.Nm serdi
-.Nd read and write RDF syntax
+.Nm serd-pipe
+.Nd read and write RDF data
 .Sh SYNOPSIS
-.Nm serdi
+.Nm serd-pipe
 .Op Fl abefhlqtv
 .Op Fl c Ar prefix
 .Op Fl i Ar syntax
@@ -57,7 +57,7 @@ will be emitted as
 .It Fl e
 Eat input one character at a time, rather than a page at a time which is the default.
 This is useful when reading from a pipe since output will be generated immediately as input arrives, rather than waiting until an entire page of input has arrived.
-With this option serdi uses one page less memory, but will likely be significantly slower.
+With this option one less page of memory is used, but likely with a performance penalty.
 .It Fl f
 Fast and loose URI mode:
 preserve full URIs (without qualifying or making relative),
