@@ -154,14 +154,14 @@ def main():
     parser.add_argument("--lax", action="store_true", help="tolerate errors")
     parser.add_argument("--report", help="path to write result report to")
     parser.add_argument("--reverse", action="store_true", help="reverse test")
-    parser.add_argument("--serdi", default="tools/serdi", help="path to serdi")
+    parser.add_argument("--tool", default="tools/serd-pipe", help="executable")
     parser.add_argument("--wrapper", default="", help="executable wrapper")
     parser.add_argument("manifest", help="test suite manifest.ttl file")
     parser.add_argument("base_uri", help="base URI for tests")
-    parser.add_argument("arg", nargs=argparse.REMAINDER, help="serdi argument")
+    parser.add_argument("arg", nargs=argparse.REMAINDER, help="tool argument")
 
     args = parser.parse_args(sys.argv[1:])
-    command = shlex.split(args.wrapper) + [args.serdi]
+    command = shlex.split(args.wrapper) + [args.tool]
 
     with tempfile.TemporaryDirectory() as temp:
         return run_suite(args, command, temp)
