@@ -1,4 +1,4 @@
-# Copyright 2021-2022 David Robillard <d@drobilla.net>
+# Copyright 2021-2023 David Robillard <d@drobilla.net>
 # SPDX-License-Identifier: 0BSD OR ISC
 
 tool_c_args = c_suppressions + platform_c_args
@@ -8,16 +8,13 @@ if get_option('static') and cc.get_id() != 'msvc'
   tool_link_args += ['-static']
 endif
 
-serdi = executable(
-  'serdi',
-  files(
-    'console.c',
-    'serdi.c',
-  ),
+serd_pipe = executable(
+  'serd-pipe',
+  files('console.c', 'serd-pipe.c'),
   c_args: tool_c_args,
   dependencies: [serd_dep, zix_dep],
   install: true,
   link_args: tool_link_args,
 )
 
-meson.override_find_program('serdi', serdi)
+meson.override_find_program('serd-pipe', serd_pipe)
